--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toStartOf="@+id/btSearchTutor"
             app:layout_constraintStart_toEndOf="@+id/textInputLayout5"
             app:layout_constraintTop_toTopOf="parent">
@@ -59,14 +60,12 @@
             android:id="@+id/btSearchTutor"
             android:layout_width="59dp"
             android:layout_height="55dp"
-            android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:background="@drawable/ic_baseline_search_24"
             app:icon="@android:drawable/ic_search_category_default"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textInputLayout6"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
